--- a/src/main/resources/public/pages/showroom.html
+++ b/src/main/resources/public/pages/showroom.html
@@ -56,6 +56,9 @@
         </div>
     </div>
 </div>
+<div class="content">
+
+</div>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const carParam = urlParams.get('car');
