--- a/src/main/resources/public/pages/index.html
+++ b/src/main/resources/public/pages/index.html
@@ -18,7 +18,7 @@
     <link rel="preload" as="image" href="../images/BMW-M8.webp">
     <meta property="og:image" content="../images/logo.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="../js%20scripts/User%20Authentication%20Autoshow.js"></script>
+    <script src="../js%20scripts/User%20Authentication.js"></script>
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css"
@@ -166,7 +166,7 @@
         });
     });
 </script>
-<script defer>
+<script>
     document.addEventListener('DOMContentLoaded', function () {
         const carCards = document.querySelectorAll('#last .car-card');
         carCards.forEach(function (card) {
