--- a/src/main/resources/public/pages/showroom.html
+++ b/src/main/resources/public/pages/showroom.html
@@ -87,6 +87,7 @@
 </footer>
 <script src="../js%20scripts/Info-Icon.js"></script>
 <div th:if="${access == 'granted-access'}">
+    <script type="module" src="../js%20scripts/3DModels-Set-Camera-Position.js"></script>
     <script type="module" src="../js%20scripts/3DModel-Scene-Switching.js"></script>
 </div>
 <script src="../js%20scripts/User%20Authentication.js"></script>
